# cnr_drapebot_drapecell

./: README.md
abb_app/: CMakeLists.txt  README.md  abb_app.kdev4  package.xml
abb_app/.kdev4/: abb_app.kdev4
abb_app/config/: drape_cell_configurations.yaml  drape_cell_hw.yaml  drape_cell_hw.yaml.save  drapebot_arbitration_config.yaml  drapebot_traj_estimation_config.yaml  ft_hw.yaml  moveit.rviz  mqtt_config.yaml  mqtt_msgs_visualization.yaml  ssm_config.yaml  wall.yaml
abb_app/launch/: arbitration.launch  assistance_estimator.launch  cell_bringup.launch  cell_bringup_drapecell.launch  cnr_configuration_manager.launch  feedback_repeater.launch  mqtt_converter.launch  ssm.launch
abb_description/: CMakeLists.txt  README.md  package.xml
abb_description/config/: deapecell.rviz  rviz.rviz
abb_description/launch/: load_irb6700_205_280.launch  test_irb6700_205_280.launch
abb_description/urdf/: irb6700_205_280.xacro  irb6700_205_280_macro.xacro
abb_moveit/: package.xml
abb_moveit/config/: abb_irb6700_205_280.srdf  fake_controllers.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  ros_controllers.yaml  stomp_planning.yaml
abb_moveit/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gazebo.launch  move_group.launch  moveit.rviz  ompl_planning_pipeline.launch.xml  planning_context.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  simple_moveit_controller_manager.launch.xml  (+1 more)
drapecell_robot_bringup/: README.md
(+4 files in other folders)
