<package format="2">
<name>abb_description</name>
<version>1.0.0</version>
<description> The ABB IRB6700 205 2.80 Description package</description>
<author email="alberto.gottardi@it-robotics.it">Alberto Gottardi</author>
<maintainer email="alberto.gottardi@it-robotics.it">Alberto Gottardi</maintainer>
<license>TODO</license>
<buildtool_depend>catkin</buildtool_depend>
<exec_depend>joint_state_publisher</exec_depend>
<exec_depend>robot_state_publisher</exec_depend>
<exec_depend>rviz</exec_depend>
<exec_depend>xacro</exec_depend>
</package>
